--- a/MixablyMac/Base.lproj/Main.storyboard
+++ b/MixablyMac/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9060"/>
+        <capability name="stacking Non-gravity area distributions on NSStackView" minToolsVersion="7.0" minSystemVersion="10.11"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -706,11 +707,111 @@
                         <rect key="frame" x="0.0" y="0.0" width="735" height="70"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JtB-Ir-b3o">
-                                <rect key="frame" x="556" y="18" width="81" height="32"/>
+                            <stackView distribution="fillProportionally" orientation="vertical" alignment="leading" spacing="0.0" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gqe-YF-fQj" userLabel="LeftControls">
+                                <rect key="frame" x="13" y="11" width="245" height="49"/>
+                                <subviews>
+                                    <slider verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="6iU-nI-9oP">
+                                        <rect key="frame" x="-2" y="30" width="249" height="21"/>
+                                        <animations/>
+                                        <sliderCell key="cell" state="on" alignment="left" maxValue="100" doubleValue="50" tickMarkPosition="above" sliderType="linear" id="hb8-Fd-aox"/>
+                                    </slider>
+                                    <stackView distribution="fill" orientation="horizontal" alignment="centerY" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Nty-cb-S6k">
+                                        <rect key="frame" x="0.0" y="0.0" width="82" height="32"/>
+                                        <subviews>
+                                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="iJh-wx-i3p" userLabel="SongLengthLabel">
+                                                <rect key="frame" x="-2" y="8" width="35" height="17"/>
+                                                <animations/>
+                                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="3:23" id="0pF-MU-jNs">
+                                                    <font key="font" metaFont="systemBold"/>
+                                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                </textFieldCell>
+                                            </textField>
+                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="XtO-Jd-wdp">
+                                                <rect key="frame" x="39" y="8" width="17" height="16"/>
+                                                <animations/>
+                                                <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="Shuffle" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="NPz-l9-Rn5">
+                                                    <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
+                                                    <font key="font" metaFont="system"/>
+                                                </buttonCell>
+                                            </button>
+                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="htz-Ic-AGO">
+                                                <rect key="frame" x="64" y="0.0" width="18" height="32"/>
+                                                <animations/>
+                                                <buttonCell key="cell" type="bevel" bezelStyle="rounded" image="Repeat" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="Irg-1o-mdU">
+                                                    <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
+                                                    <font key="font" metaFont="system"/>
+                                                </buttonCell>
+                                            </button>
+                                        </subviews>
+                                        <animations/>
+                                        <visibilityPriorities>
+                                            <integer value="1000"/>
+                                            <integer value="1000"/>
+                                            <integer value="1000"/>
+                                        </visibilityPriorities>
+                                        <customSpacing>
+                                            <real value="3.4028234663852886e+38"/>
+                                            <real value="3.4028234663852886e+38"/>
+                                            <real value="3.4028234663852886e+38"/>
+                                        </customSpacing>
+                                    </stackView>
+                                </subviews>
                                 <animations/>
-                                <buttonCell key="cell" type="push" title="Button" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="QNc-u4-0jA">
-                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                <visibilityPriorities>
+                                    <integer value="1000"/>
+                                    <integer value="1000"/>
+                                </visibilityPriorities>
+                                <customSpacing>
+                                    <real value="3.4028234663852886e+38"/>
+                                    <real value="3.4028234663852886e+38"/>
+                                </customSpacing>
+                            </stackView>
+                            <stackView distribution="fill" orientation="horizontal" alignment="centerY" spacing="26" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UBA-Ji-cX5" userLabel="PlayerControls">
+                                <rect key="frame" x="298" y="20" width="139" height="31"/>
+                                <subviews>
+                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="HLi-eE-ZP5">
+                                        <rect key="frame" x="0.0" y="6" width="28" height="20"/>
+                                        <animations/>
+                                        <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="Rewind" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="0BT-fn-BJ5">
+                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                            <font key="font" metaFont="system"/>
+                                        </buttonCell>
+                                    </button>
+                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="BcQ-oI-b89">
+                                        <rect key="frame" x="54" y="0.0" width="30" height="31"/>
+                                        <animations/>
+                                        <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="Play" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="sIe-GW-bcY">
+                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                            <font key="font" metaFont="system"/>
+                                        </buttonCell>
+                                    </button>
+                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="fQO-WR-CiA">
+                                        <rect key="frame" x="110" y="6" width="29" height="20"/>
+                                        <animations/>
+                                        <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="FastForward" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="eH4-1u-dhI">
+                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                            <font key="font" metaFont="system"/>
+                                        </buttonCell>
+                                    </button>
+                                </subviews>
+                                <animations/>
+                                <visibilityPriorities>
+                                    <integer value="1000"/>
+                                    <integer value="1000"/>
+                                    <integer value="1000"/>
+                                </visibilityPriorities>
+                                <customSpacing>
+                                    <real value="3.4028234663852886e+38"/>
+                                    <real value="3.4028234663852886e+38"/>
+                                    <real value="3.4028234663852886e+38"/>
+                                </customSpacing>
+                            </stackView>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="JtB-Ir-b3o" userLabel="MixiblyButton">
+                                <rect key="frame" x="676" y="16" width="39" height="39"/>
+                                <animations/>
+                                <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="Mixably" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="QNc-u4-0jA">
+                                    <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                                 <connections>
@@ -718,6 +819,15 @@
                                 </connections>
                             </button>
                         </subviews>
+                        <constraints>
+                            <constraint firstItem="gqe-YF-fQj" firstAttribute="leading" secondItem="RLX-pl-o68" secondAttribute="leading" constant="13" id="4X5-OX-iVr"/>
+                            <constraint firstItem="gqe-YF-fQj" firstAttribute="centerY" secondItem="RLX-pl-o68" secondAttribute="centerY" id="KzV-Tj-MKZ"/>
+                            <constraint firstItem="JtB-Ir-b3o" firstAttribute="centerY" secondItem="RLX-pl-o68" secondAttribute="centerY" id="Uq2-zz-82Z"/>
+                            <constraint firstAttribute="trailing" secondItem="JtB-Ir-b3o" secondAttribute="trailing" constant="20" id="Yh0-FJ-LSW"/>
+                            <constraint firstItem="UBA-Ji-cX5" firstAttribute="centerX" secondItem="RLX-pl-o68" secondAttribute="centerX" id="fI1-Fi-bPu"/>
+                            <constraint firstItem="UBA-Ji-cX5" firstAttribute="leading" secondItem="gqe-YF-fQj" secondAttribute="trailing" constant="40" id="vtQ-Cw-Rxm"/>
+                            <constraint firstItem="UBA-Ji-cX5" firstAttribute="centerY" secondItem="RLX-pl-o68" secondAttribute="centerY" id="xgj-Ec-9Bu"/>
+                        </constraints>
                         <animations/>
                     </view>
                 </viewController>
@@ -734,4 +844,12 @@
             <point key="canvasLocation" x="1623" y="1087"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="FastForward" width="29" height="20"/>
+        <image name="Mixably" width="39" height="39"/>
+        <image name="Play" width="30" height="31"/>
+        <image name="Repeat" width="18" height="20"/>
+        <image name="Rewind" width="28" height="20"/>
+        <image name="Shuffle" width="17" height="16"/>
+    </resources>
 </document>
