--- a/MixablyMac/Mixably.storyboard
+++ b/MixablyMac/Mixably.storyboard
@@ -83,10 +83,10 @@
             </objects>
             <point key="canvasLocation" x="2624" y="2674"/>
         </scene>
-        <!--View Controller-->
+        <!--Mixably Songs View Controller-->
         <scene sceneID="Ubl-sY-EUm">
             <objects>
-                <viewController id="bf0-MY-G1j" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MXMixablySongsViewController" id="bf0-MY-G1j" customClass="MXMixablySongsViewController" customModule="MixablyMac" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="Vv6-nD-AH4">
                         <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -105,7 +105,7 @@
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                             <tableColumns>
-                                                <tableColumn width="116" minWidth="40" maxWidth="1000" id="8Nj-iW-CG7">
+                                                <tableColumn width="50.3125" minWidth="40" maxWidth="1000" id="8Nj-iW-CG7">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -119,19 +119,25 @@
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
                                                         <tableCellView id="tHK-4q-r00">
-                                                            <rect key="frame" x="1" y="1" width="115.6935779572068" height="17"/>
+                                                            <rect key="frame" x="1" y="1" width="50" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
-                                                                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6a6-4C-muT">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="17"/>
+                                                                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="6a6-4C-muT">
+                                                                    <rect key="frame" x="-2" y="0.0" width="54" height="17"/>
                                                                     <animations/>
-                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="iQz-3f-BWH">
+                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" alignment="right" title="1." id="iQz-3f-BWH">
                                                                         <font key="font" metaFont="system"/>
                                                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
                                                                 </textField>
                                                             </subviews>
+                                                            <constraints>
+                                                                <constraint firstAttribute="trailing" secondItem="6a6-4C-muT" secondAttribute="trailing" id="7G3-9K-GZZ"/>
+                                                                <constraint firstAttribute="bottom" secondItem="6a6-4C-muT" secondAttribute="bottom" id="MAb-hD-Rz3"/>
+                                                                <constraint firstItem="6a6-4C-muT" firstAttribute="leading" secondItem="tHK-4q-r00" secondAttribute="leading" id="aSR-cj-hzP"/>
+                                                                <constraint firstItem="6a6-4C-muT" firstAttribute="top" secondItem="tHK-4q-r00" secondAttribute="top" id="ch5-b9-gfz"/>
+                                                            </constraints>
                                                             <animations/>
                                                             <connections>
                                                                 <outlet property="textField" destination="6a6-4C-muT" id="qtx-HX-WAm"/>
@@ -140,7 +146,7 @@
                                                     </prototypeCellViews>
                                                 </tableColumn>
                                                 <tableColumn width="324.06997475146204" minWidth="40" maxWidth="1000" id="rwt-f7-Roq">
-                                                    <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
+                                                    <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="Name">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                         <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
@@ -153,19 +159,28 @@
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
                                                         <tableCellView id="dnH-Ai-1v4">
-                                                            <rect key="frame" x="119.45965860081404" y="1" width="323.6935779572068" height="17"/>
+                                                            <rect key="frame" x="54" y="1" width="324" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
-                                                                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lon-pU-DgC">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="17"/>
+                                                                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="Lon-pU-DgC">
+                                                                    <rect key="frame" x="-2" y="0.0" width="328" height="17"/>
                                                                     <animations/>
-                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="7RW-aA-hkF">
+                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Song Name" id="7RW-aA-hkF">
                                                                         <font key="font" metaFont="system"/>
                                                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
+                                                                    <connections>
+                                                                        <binding destination="dnH-Ai-1v4" name="value" keyPath="objectValue.name" id="3Wt-91-mxw"/>
+                                                                    </connections>
                                                                 </textField>
                                                             </subviews>
+                                                            <constraints>
+                                                                <constraint firstItem="Lon-pU-DgC" firstAttribute="leading" secondItem="dnH-Ai-1v4" secondAttribute="leading" id="1U5-rQ-qV4"/>
+                                                                <constraint firstItem="Lon-pU-DgC" firstAttribute="top" secondItem="dnH-Ai-1v4" secondAttribute="top" id="EWp-Oh-aIm"/>
+                                                                <constraint firstAttribute="bottom" secondItem="Lon-pU-DgC" secondAttribute="bottom" id="cvD-ym-dRv"/>
+                                                                <constraint firstAttribute="trailing" secondItem="Lon-pU-DgC" secondAttribute="trailing" id="th6-5B-FIA"/>
+                                                            </constraints>
                                                             <animations/>
                                                             <connections>
                                                                 <outlet property="textField" destination="Lon-pU-DgC" id="ZNM-GG-GUh"/>
@@ -174,6 +189,9 @@
                                                     </prototypeCellViews>
                                                 </tableColumn>
                                             </tableColumns>
+                                            <connections>
+                                                <binding destination="1up-Kv-Eej" name="content" keyPath="arrangedObjects" id="m2M-3g-M0v"/>
+                                            </connections>
                                         </tableView>
                                     </subviews>
                                     <animations/>
@@ -207,6 +225,11 @@
                     </view>
                 </viewController>
                 <customObject id="cig-bS-8BK" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+                <arrayController id="1up-Kv-Eej">
+                    <connections>
+                        <binding destination="bf0-MY-G1j" name="contentArray" keyPath="songs" id="Xno-yp-LGP"/>
+                    </connections>
+                </arrayController>
             </objects>
             <point key="canvasLocation" x="2624" y="2916"/>
         </scene>
